feat: generalize java development skill